change structure in sass

--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -5,7 +5,7 @@
 @import "./mixins/media", "./mixins/typography";
 
 // Helpers
-@import "./base/helper", "./base/base";
+@import "./base/helper", "./base/spacing", "./base/base";
 
 // Components
 @import "./components/typography", "./components/breadcrumb",
