--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -648,6 +648,7 @@ del {
 .container {
   max-width: 1440px;
   margin: 0 auto;
+  padding: 0 15px;
 }
 @media (max-width: 991.98px) {
   .container {
