--- a/styles/sass/components/_breadcrumb.scss
+++ b/styles/sass/components/_breadcrumb.scss
@@ -1,9 +1,11 @@
 .breadcrumb {
   display: flex;
   align-items: center;
+  overflow-x: auto;
 
   &-item {
     color: $color-natural-600;
+    white-space: nowrap;
 
     &:not(:first-child)::before {
       content: "/";
