--- a/styles/sass/mixins/_media.scss
+++ b/styles/sass/mixins/_media.scss
@@ -1,53 +1,34 @@
+/*
+    Parameters:
+        syntax:
+            - min
+            - max
+        device:
+            - sm
+            - lg
+
+    Devices size:
+        sm = less than and equal 991.99
+        lg = more than and equal 992
+*/
 @mixin media($syntax, $device) {
-  @if $syntax == "max" {
-    @if ($device == "xs") {
-      @media (max-width: 575.98px) {
+  @if ($syntax == "min") {
+    @if ($device == "sm") {
+      @media (min-width: 0) {
         @content;
       }
-    } @else if ($device == "sm") {
-      @media (max-width: 767.98px) {
-        @content;
-      }
-    } @else if ($device == "md") {
-      @media (max-width: 991.98px) {
-        @content;
-      }
-    } @else if ($device == "lg") {
-      @media (max-width: 1199.98px) {
-        @content;
-      }
-    } @else if ($device == "xl") {
-      @media (max-width: 500000px) {
-        @content;
-      }
-    } @else {
-      @media (max-width: $device) {
-        @content;
-      }
-    }
-  } @else if $syntax == "min" {
-    @if ($device == "xs") {
-      @media (max-width: 575.98px) {
-        @content;
-      }
-    } @else if ($device == "sm") {
-      @media (min-width: 576px) {
-        @content;
-      }
-    } @else if ($device == "md") {
-      @media (min-width: 768px) {
-        @content;
-      }
-    } @else if ($device == "lg") {
+    } @else if($device == "lg") {
       @media (min-width: 992px) {
         @content;
       }
-    } @else if ($device == "xl") {
-      @media (min-width: 1200px) {
+    }
+  } @else if($syntax == "max") {
+    @if ($device == "sm") {
+      @media (max-width: 991.99px) {
         @content;
       }
-    } @else {
-      @media (max-width: $device) {
+    } @else if($device == "lg") {
+      @media (max-width: 5000000px) {
         @content;
       }
     }
